--- a/Kubernetes/deployment.yml
+++ b/Kubernetes/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: netflix-app
-        image: devopscloudlabs/netflix:latest
+        image: rohannegi11/netflixdeployment:latest
         ports:
         - containerPort: 80
